--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,18 +1,20 @@
-# General zola build workflow.
-# prerequisites:
+# Zola build workflow.
+
+# Prerequisites:
 # - zola writes output to public/
 # - variables below set correctly
 #
-# Note: it is a general limitation of gh-actions can not make the very
-# first deploy to gh-pages.  It will seem to work, but not appear on
-# the CDN to be online.  You need to go to settings and set the
-# gh-pages branch, then future deploys will work.  See
-#  https://github.com/marketplace/actions/github-pages-action#%EF%B8%8F-first-deployment-with-github_token
+# Setting it up:
+#   It is a general limitation of gh-actions that they cannot make the very first
+#   deploy to gh-pages.  It will seem to work, but not appear on the CDN to be
+#   online.  You need to go to settings and set the gh-pages branch, then future
+#   deploys will work.  See
+#   https://github.com/marketplace/actions/github-pages-action#%EF%B8%8F-first-deployment-with-github_token
 
 name: Build/deploy website
 
 env:
-  ZOLA_VERSION: "0.15.3"
+  ZOLA_VERSION: "0.16.0"
   MAIN_BRANCH: "main"
   TARGET_BRANCH: "gh-pages"
 # CNAME: "example.org"
@@ -37,19 +39,6 @@ jobs:
         wget -O - \
            "https://github.com/getzola/zola/releases/download/v${ZOLA_VERSION}/zola-v${ZOLA_VERSION}-x86_64-unknown-linux-gnu.tar.gz" \
         | sudo tar xzf - -C /usr/local/bin
-    - name: debugging info
-      run: |
-        zola --version
-        echo github: ${{ github }}
-        echo github.actor: ${{ github.actor }}
-        echo github.event: ${{ github.event }}
-        echo github.event_name: ${{ github.event_name }}
-        echo github.ref: ${{ github.ref }}
-        echo github.base_ref: ${{ github.base_ref }}
-        echo github.head_ref: ${{ github.head_ref }}
-        echo github.repo_owner: ${{ github.repository_owner }}
-        echo github.repository: ${{ github.repository }}
-        echo MAIN_BRANCH: ${{ env.MAIN_BRANCH }}
     - name: Generate HTML
       run: zola build
     # Add CNAME, either (first one used)
