--- a/config.toml
+++ b/config.toml
@@ -26,6 +26,7 @@ highlight_theme = "cheerfully-light"
 
 navigation = [
   { name = "Home", target = "/" },
+  { name = "Blog", target = "/blog/" },
   { name = "About us", target = "/about/" },
   { name = "Vision", target = "/vision/" },
   { name = "Courses", target = "/courses/" },
