Shorten one quote to make it fit

--- a/content/feedback.toml
+++ b/content/feedback.toml
@@ -12,7 +12,7 @@ was really cool!
 
 [[feedback]]
 text = """
-It felt like having a personal programming coach—one who not only knows the
+Like having a personal programming coach—one who not only knows the
 technical aspects but can also communicate effectively with non-programmers.
 """
 
