--- a/content/feedback.yml
+++ b/content/feedback.yml
@@ -11,3 +11,29 @@ feedback:
   - text: |
       If you’re considering reaching out to them, don’t hesitate — just do it. And
       bring cookies!
+  - text: |
+      [...] open sourcing of a Fortran
+      source code which would be near impossible without the software engineering
+      support group.
+  - text: |
+      I highly recommend this service to any researcher looking for reliable
+      and efficient computational resources.
+  - text: |
+      Great support. Saved me weeks and weeks of time. Super
+      helpful and friendly.
+  - text: |
+      This cut the time to run my analysis from many days down to hours.
+  - text: |
+      I got help from the RSE Group structuring my code, which has been very
+      helpful for the specific project, but also for future projects.
+  - text: |
+     They're able to communicate these solutions and the reasoning behind them
+     in a way that makes sense for me so that I can apply it in my future coding
+     activities.
+  - text: |
+     The RSE team made an incredible effort to both understand my problem, and
+     explain possible solutions to it in a way that I (as a relatively
+     non-technical person) could understand.
+  - text: |
+     The support offered by the research and software engineering team at UiT is
+     immensely useful to anyone who wants to integrate coding into their research.
