Initial design of financing model

--- a/content/navigation.yml
+++ b/content/navigation.yml
@@ -1,6 +1,8 @@
 navigation:
   - name: Home
     target: /
+  - name: Services
+    target: /services/
   - name: About us
     target: /about/
   - name: Vision
